# yamlbridge

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md
src/yamlbridge/: __init__.py  cloudformation.py
tests/: test_cfn_loader_aliases.py  test_cfn_loader_failures.py  test_cfn_loader_mappings.py  test_cfn_loader_nested.py  test_cfn_loader_scalars.py  test_cfn_loader_sequences.py  test_public_api.py  test_version_smoke.py
